linking my index.js to my index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div>
     <button id="submitBtn">Next</button>
     </div>
+    <script src="./assets/quiz.js"></script>
     
 </body>
 </html>
