--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <button id="submitBtn">Next</button>
     </div>
-    <script src="./assets/quiz.js"></script>
+    <script src="./assets/index.js"></script>
     
 </body>
 </html>
