--- a/assets/question.html
+++ b/assets/question.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id ="quest">
         <h1>Answer all the Questions</h1>  
-        <h2 id="question" id ="quest">QUIZ</h2>
+        <h2 id="question">QUIZ</h2>
         <div id="list"> 
             <ul>
             <li>
